--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ symphonia-flac = ["symphonia/flac"]
 symphonia-isomp4 = ["symphonia/isomp4"]
 symphonia-mp3 = ["symphonia/mp3"]
 symphonia-wav = ["symphonia/wav", "symphonia/pcm"]
+jack = ["cpal/jack"]
 
 [dev-dependencies]
 quickcheck = "0.9.2"
